--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
-    "autoprefixer": "10.4.21",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "pnpm": "^10.6.5",
-    "postcss": "8.5.3",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "4.0.15",
     "typescript": "5.8.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.13.11",
     "@types/react": "19.0.12",
-    "@types/react-dom": "19.0.4"
+    "@types/react-dom": "19.0.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15"
   }
 }
