--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.23.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15"
   }
